2013-09-06  Per Bothner  <per@bothner.com>

	* testing.scm: Generalize test-approximimate to complex.
	(%test-approximimate=): Handle non-real complex numbers.

2013-06-02  Per Bothner  <per@bothner.com>

	* conditions.scm: Minor tweaks.

2013-02-23  Per Bothner  <per@bothner.com>

	* printf.scm (formal-real): Add missing else for case.
	* srfi14.scm (->char-set): Add missing else for case.

2013-02-02  Per Bothner  <per@bothner.com>

	* testing.scm (test-on-test-begin-simple): Fix thinko.

2012-12-26  Álvaro Castro-Castilla

	* testing.scm: Modified for Scheme Spheres.

2012-12-23  Per Bothner  <per@bothner.com>

	* srfi14.scm (%boundary-pairs-union): Fix for Savannah bug #37633
	"char-set-union with same char-sets".  Fix by anonymous;
	verified by Jamison Hope.

2012-12-22  Per Bothner  <per@bothner.com>

	* pregexp.scm (pregexp-error): Just define as error function.
	(pregexp-match-positions-aux): Remove unreachable constant.

2012-11-18  Per Bothner  <per@bothner.com>

	* testing.scm: Add test-group to list of exported names.

2012-09-11  Helmut Eller  <eller.helmut@gmail.com>

	Fix Savannah bug #15579.
	Handle some complex arglists, in particular #!rest args.
	* syntaxutils.scm (unrewrite-arglist): New function.
	(unrewrite): Use it.

2012-07-10  Per Bothner  <per@bothner.com>

	* Xutils.scm: Moved to gnu/xquery/util.
	* Makefile.am: Update accordingly.

	* Xutils.scm: New file.
	(count-values): New function.
	* Makefile.am: Update accordingly.

2012-07-03  Per Bothner  <per@bothner.com>

	* Makefile.am: Conditionalize gui.scm on WITH_AWT.

2012-03-11  Per Bothner  <per@bothner.com>

	* srfi69.scm (symbol-hash, vector-hash): Remove non-exported
	un-used functions.

	* conditions.scm: Add some missing exports.

	* StreamsPrimitive.scm (stream-force): Moved from here ...
	* StreamsType.scm: ... here, because it is no part of the API
	for streams.primitive.

2012-02-07  Jamison Hope  <jrh@theptrgroup.com>
