@@ -1,3 +1,7 @@
+2013-09-25  Per Bothner  <per@bothner.com>
+
+	* Scheme.java (initScheme): Add 'list-set!' and 'list-copy'.
+
 2013-09-23  Per Bothner  <per@bothner.com>
 
 	* repl.java (processArgs): Fix a bug in previous change
